test/lexer/error/err_07_illegal_char_sequence.pl0
program illegal_seq;
var x;
begin
  x := @#$!;  // Sequence of illegal chars
end
